pihole-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  rules:
  - host: pihole.kintbury
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 80
